--- a/css/styles.css
+++ b/css/styles.css
@@ -4178,6 +4178,9 @@ textarea.form-control-lg {
   background-clip: border-box;
   border: var(--bs-card-border-width) solid var(--bs-card-border-color);
   border-radius: var(--bs-card-border-radius);
+  max-width: 400px; /* Define el ancho máximo de la tarjeta */
+  margin: 0 auto;  /* Centra la tarjeta */
+  height: 100%;
 }
 .card > hr {
   margin-right: 0;
@@ -4206,6 +4209,7 @@ textarea.form-control-lg {
   flex: 1 1 auto;
   padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
   color: var(--bs-card-color);
+  flex-grow: 1;
 }
 
 .card-title {
@@ -4293,6 +4297,11 @@ textarea.form-control-lg {
 .card-group > .card {
   margin-bottom: var(--bs-card-group-margin);
 }
+
+.card ul {
+  margin-top: auto;
+}
+
 @media (min-width: 576px) {
   .card-group {
     display: flex;
